Day 2/ingress/microservice_a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-a
  labels:
    app: microservice-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-a
  template:
    metadata:
      labels:
        app: microservice-a
    spec:
      containers:
      - name: microservice-a
        image: axelsirota/microservice-a:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-a
spec:
  selector:
    app: microservice-a
  ports:
    - protocol: TCP
      port: 80  # We map the external traffic to the containerPort 5000
      targetPort: 5000
  type: ClusterIP
