Day 2/ingress/microservice_b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-b
  labels:
    app: microservice-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-b
  template:
    metadata:
      labels:
        app: microservice-b
    spec:
      containers:
      - name: microservice-b
        image: axelsirota/microservice-b:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-b
spec:
  selector:
    app: microservice-b
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP  # Internal Service
