Day 2/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-a-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Specify the IngressClass name here
  rules:
  - host: "microservice-a.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservice-a
            port:
              number: 80
